--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/cons.jpg" alt="construction">
+                    <img src="images/monkey.png" alt="monkey">
                     <div class="layer">
-                        <h3>[UNDER PROGRESS]</h3>
-                        <p> </p>
-                        <a href="https://github.com/arindal1?tab=repositories" target="_blank"><img src="images/extlink.png"></a>
+                        <h3>Monkey's Paw</h3>
+                        <p>A React and TailwindsCSS based web-app integrated with Gemini's 1.5-flash model to generate Monkey's Paw like responses based on user's wishes.</p>
+                        <a href="https://monkeys-paw-eight.vercel.app/" target="_blank"><img src="images/extlink.png"></a>
                     </div>
                 </div>
                 <div class="work">
